--- a/index.html
+++ b/index.html
@@ -64,10 +64,13 @@
     <a href="#body" title="scorri giù"><p>Scorri su</p></a>
 
     <p>Contatti: 
-        <a href="https://github.com/Ninfa-C" title="Git_Hub_Ninfa-C">GitHub</a>
+        <ul>
+            <li><a href="https://github.com/Ninfa-C" title="Git_Hub_Ninfa-C">GitHub</a></li>
+            <li><a href="javascript:void(0)" title="Git_Hub_Ninfa-C">Linkedin</a></li>
+        </ul>
     </p>
 
-    <footer id="Footer"> Copyright &#169; Ninfa Lissette Carreno Jacho</footer>
+    <footer id="Footer"> Copyright &#169; Ninfa Lissette Carreno Jacho 2024</footer>
 
         
 </body>
