--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <p>Contatti: 
         <ul>
             <li><a href="https://github.com/Ninfa-C" title="Git_Hub_Ninfa-C">GitHub</a></li>
-            <li><a href="javascript:void(0)" title="Git_Hub_Ninfa-C">Linkedin</a></li>
+            <li><a href="javascript:void(0)">Linkedin</a></li>
         </ul>
     </p>
 
