--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Excercise_S1L1</title>
+    <title>Exercise_S1L1</title>
 </head>
 <body id="body">
 
